[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knot"
version = "0.2.0"
description = "Unified CLI for the KNOTstore application suite (vault, forge, ledger, checkpoint)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "lumenhelixsolutions" }]
keywords = ["content-addressed", "dedup", "cli", "knotstore"]

[project.scripts]
knot = "knot.cli:main"

[tool.setuptools]
packages = ["knot"]
